Some tweaks to the header, fonts etc

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://actionshrimp.github.com
 title: actionshrimp.com
-subtitle: coding adventures
+subtitle: Coding adventures of Dave Aitken
 author: Dave Aitken
 simple_search: http://google.com/search
 description:
