--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/actionshrimp/actionshrimp.github.io#readme",
   "devDependencies": {
     "parcel-bundler": "^1.12.4",
-    "posthtml-include": "^1.6.0"
+    "posthtml-include": "^1.6.0",
+    "sass": "^1.32.5"
   }
 }
