--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "homepage": "https://github.com/actionshrimp/actionshrimp.github.io#readme",
   "devDependencies": {
     "parcel-bundler": "^1.12.4",
+    "posthtml-doctype": "^1.1.1",
     "posthtml-include": "^1.6.0",
+    "posthtml-md": "^1.1.0",
     "sass": "^1.32.5"
   }
 }
