--- a/.posthtmlrc
+++ b/.posthtmlrc
@@ -8,6 +8,9 @@
         },
         "posthtml-md": {
             "root": "./src"
+        },
+        "posthtml-inline-svg": {
+            "cwd": "node_modules/@fortawesome/fontawesome-free/svgs"
         }
     }
 }
