--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "parcel-bundler": "^1.12.4",
     "posthtml-doctype": "^1.1.1",
     "posthtml-include": "^1.6.0",
+    "posthtml-inline-svg": "^0.2.0",
     "posthtml-md": "^1.1.0",
     "sass": "^1.32.5"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.2"
   }
 }
